# Django-boilerplate

./: .gitignore  Makefile  README.md  pyproject.toml
<project-name>/: manage.py
<project-name>/<project-name>/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
webapp/webapp/: .env.example  settings.py
