[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = "Python Based Boilerplate to help out creating Web Apps"
authors = ["Rurik Pinheiro"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_boilerplate"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.5"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
commitizen = "^3.10.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
